--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json}": ["biome format --write", "biome lint --write"]
+    "*.{js,jsx,ts,tsx,json}": [
+      "biome format --write",
+      "biome lint --write"
+    ]
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
@@ -32,6 +35,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/ssr": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
